--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "publish": "npm run build && gh-pages -d dist"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
-    "ts-loader": "^5.2.2",
-    "typescript": "^3.1.3",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "gh-pages": "*",
+    "ts-loader": "*",
+    "typescript": "*",
+    "webpack": "*",
+    "webpack-cli": "*",
+    "webpack-dev-server": "*"
   },
   "dependencies": {
-    "@polymer/lit-element": "^0.6.2"
+    "lit-element": "*"
   }
 }
